main_application/manifests/service.yml
apiVersion: v1
kind: Service
metadata:
  name: timestamp-hash-svc
spec:
  type: ClusterIP
  selector:
    app: timestamp-hash
  ports:
    - port: 2345
      protocol: TCP
      targetPort: 5000
