main_application/manifests/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: main-app-ingress
  namespace: main-app
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: timestamp-hash-svc
          servicePort: 80
      - path: /pingpong
        backend:
          serviceName: pingpong-svc
          servicePort: 80
